# copper-rs

./: Cargo.toml
core/cu29_derive/: Cargo.toml
core/cu29_derive/src/: lib.rs
core/cu29_encode/: Cargo.toml
core/cu29_encode/src/: complex.rs  compound.rs  element.rs  encoding.rs  forward.rs  intermediate.rs  lib.rs  type_list.rs  upstream.rs
core/cu29_encode/src/complex/: alloc_impls.rs  core_impls.rs  impls.rs  primitive_impls.rs  private.rs  std_impls.rs
core/cu29_encode/src/compound/: private.rs
core/cu29_encode/src/encoding/: messages.rs  type_list.rs
core/cu29_encode/src/encoding/messages/: private.rs
core/cu29_encode/src/ros2msg/: codec.rs  format.rs  mod.rs  schema.rs  value.rs
core/cu29_encode/src/ros2msg/value/: alloc_impls.rs  core_impls.rs  primitive_impls.rs  std_impls.rs
core/cu29_encode/src/upstream/: alloc_impls.rs  core_impls.rs  primitive_impls.rs  std_impls.rs
core/cu29_ros2msg/: Cargo.toml
core/cu29_ros2msg/src/: codec.rs  format.rs  lib.rs  schema.rs  value.rs
core/cu29_ros2msg/src/value/: alloc_impls.rs  primitive_impls.rs  std_impls.rs
