[package]
name = "cu29-ros2msg"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bincode.workspace = true
cu29-encode.workspace = true
